fix header links spacing

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ header a {
   text-decoration: none;
   color: #4d4d4d;
   font-weight: 600;
-  padding: 5px 20px;
+  padding: 5px;
 }
 
 header a:hover {
@@ -423,4 +423,28 @@ i[class*="van-type-"] {
   color: #161616;
   text-decoration: underline;
   font-weight: 700;
+}
+
+.host-van-detail-info > h4 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+.host-van-detail-info > h4 > span {
+  font-weight: 500;
+}
+
+.host-van-price {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.host-van-price > span {
+  font-size: 16px;
+  color: #4d4d4d;
+}
+
+.host-van-detail-image {
+  height: 100px;
+  border-radius: 5px;
 }
